@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR
skinparam classBackgroundColor LOGIC_COLOR

package "Logic" as LogicPackage {

class LogicManager
class AddressBookParser
interface AliasProvider

}

package "Model" as ModelPackage {
class ModelManager
}

LogicManager --> AddressBookParser
AddressBookParser ..> AliasProvider
ModelManager .up.|> AliasProvider

@enduml
